--- a/Plot.ipynb
+++ b/Plot.ipynb
@@ -281,11 +281,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Ratio-Plot"
+   ]
   },
   {
    "cell_type": "code",
@@ -332,11 +332,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## CDF Plot"
+   ]
   },
   {
    "cell_type": "code",
@@ -401,6 +401,13 @@
     "ax.legend(('Real','Fake'))\n",
     "ax.set_xlabel('Tweet Frequency')\n",
     "ax.set_ylabel('Probability')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TF-IDF"
    ]
   },
   {
