--- a/Visualization/Plot.ipynb
+++ b/Visualization/Plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2231,66 +2231,144 @@
     "print(numRetweeted)\n",
     "print(numRetweetedFalse)\n",
     "\n",
-    "#No retweets are retweeted! -> only 2 hops"
+    "#No retweets are retweeted! -> only 2 hops\n",
+    "#CANT DO CASCADE PLOT, BECAUSE THERE IS ONLY TWO HOPS FOR EACH TWEET!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Followers Reached Scatterplot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2016', '01', '12 21:12:19']\n",
+      "['2016', 'Jan', '12 21:12:19']\n",
+      "<class 'list'>\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'followers'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-390-bf73ecf0b6f5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0ml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfakeArticlesPD\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'created_at'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mdel\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[1;32mdel\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m     \u001b[0mstr1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m' '\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mdate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'%b %d %H:%M:%S %Y'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list assignment index out of range"
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-120-5240263026d6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfakeArticlesPD\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'retweets'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfakeArticlesPD\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'retweets'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m774\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'followers'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 'followers'"
      ]
     }
    ],
    "source": [
-    "#X-Article, Y-Time. All the articles has only two hops (source and retweet)\n",
+    "import datetime\n",
+    "test = str(fakeArticlesPD['created_at'][0]).split(' ')\n",
+    "test2 = ' '.join(test)\n",
+    "test3 = test2.split('+')\n",
+    "del test3[1]\n",
+    "test3 = ' '.join(test3)\n",
+    "test3 = test3.split('-')\n",
+    "print(test3)\n",
+    "test3[1] = datetime.date(1900, int(test3[1]), 1).strftime('%B')\n",
+    "temp = test3[1]\n",
+    "test3[1] = temp[0:3]\n",
+    "print(test3)\n",
     "\n",
+    "print(type(fakeArticlesPD['retweets'][1]))\n",
+    "print(fakeArticlesPD['retweets'][774][0]['followers'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#X-TIME, Y-NUMBER OF RETWEETS\n",
+    "#les bigDataClean.pkl for followers\n",
+    "#MAKE DICT OF TIME:NUM_FOLLOWERS\n",
+    "#NUM_FOLLOWERS IS CUMULATIVE SUM OF FOLLOWERS WITH RESPECT TO TIME\n",
+    "#use 1975 to compute times in seconds\n",
     "from datetime import datetime\n",
-    "\n",
+    "import datetime as dtime\n",
     "timePerHops = {}\n",
     "for i,user in enumerate(fakeArticlesPD['user']):\n",
     "    hops = 0\n",
     "    time = 0\n",
     "    if hops not in timePerHops:\n",
     "        timePerHops[hops] = []\n",
-    "    l = str(fakeArticlesPD['created_at'][i]).split(' ')\n",
-    "    del l[0]\n",
-    "    del l[3]\n",
-    "    str1 = ' '.join(l)\n",
-    "    date = datetime.strptime(str1,'%b %d %H:%M:%S %Y')\n",
-    "    #convert date to seconds\n",
-    "    tot_sec = date.total_seconds()\n",
-    "    timePerHops[hops].append(tot_sec)\n",
+    "    l = str(fakeArticlesPD['created_at'][i]).split(' ') #split on space, + and -\n",
+    "    l = ' '.join(l)\n",
+    "    l = l.split('+')\n",
+    "    #print(l)\n",
+    "    try:\n",
+    "        del l[1]\n",
+    "        l = ' '.join(l)\n",
+    "        l = l.split('-')\n",
+    "        l[1] = dtime.date(1900, int(l[1]), 1).strftime('%B')\n",
+    "        temp = l[1]\n",
+    "        l[1] = temp[0:3]\n",
+    "        l = ' '.join(l)\n",
+    "        #print(l)\n",
+    "        date = datetime.strptime(l,'%Y %b %d %H:%M:%S')\n",
+    "        #print(date)\n",
+    "        #convert date to seconds\n",
+    "        timePerHops[hops].append(0)\n",
     "                                 \n",
-    "    time = fakeArticlesPD['created_at'].toInt\n",
-    "    for retweet in fakeArticlesPD['retweets']:\n",
-    "        if retweet[0]['user']['id_str'] == user['id_str']:\n",
-    "            hops += 1\n",
-    "            if hops not in timePerHops:\n",
-    "                timePerHops[hops] = []\n",
-    "            l = str(retweet[0]['created_at']).split(' ')\n",
-    "            del l[0]\n",
-    "            del l[3]\n",
-    "            str1 = ' '.join(l)\n",
-    "            date2 = datetime.strptime(str1,'%b %d %H:%M:%S %Y')\n",
-    "            time += date2 - fakeArticlesPD['created_at']\n",
-    "            total_sec = time.total_seconds()\n",
-    "            timePerHops[hops].append(total_sec)\n",
+    "        time = 0\n",
+    "        for retweet in fakeArticlesPD['retweets']:\n",
+    "            test = 0\n",
+    "            if type(retweet) is list:\n",
+    "                if retweet:\n",
+    "                    test += 1\n",
+    "        for retweet in fakeArticlesPD['retweets']:\n",
+    "            \n",
+    "            try:\n",
+    "            #print('LOL')\n",
+    "            #print(user['id_str'])\n",
+    "            #print('LOL')\n",
+    "            \n",
+    "                #print(fakeArticlesPD['retweets'][2])\n",
+    "                if retweet[0]['user']['id_str'] == user['id_str']:\n",
+    "                    hops += 1\n",
+    "                    if hops not in timePerHops:\n",
+    "                        timePerHops[hops] = []\n",
+    "                    l = str(retweet[0]['created_at']).split(' ')\n",
+    "                    #print(retweet[20]['created_at'])\n",
+    "                    del l[0]\n",
+    "                    del l[3]\n",
+    "                    str1 = ' '.join(l)\n",
+    "                    date2 = datetime.strptime(str1,'%b %d %H:%M:%S %Y')\n",
+    "                    time += date2 - date\n",
+    "                    total_sec = time.total_seconds()\n",
+    "                    timePerHops[hops].append(total_sec)\n",
+    "                    date = date2\n",
+    "            except TypeError:\n",
+    "                pass\n",
+    "    except IndexError:\n",
+    "        pass\n",
     "print(fakeArticlesPD['retweets'][774][0]['in_reply_to_status_id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -2313,6 +2391,17 @@
       "776                                                  NaN\n",
       "Name: user, Length: 777, dtype: object\n"
      ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'datetime.datetime' object has no attribute 'total_seconds'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-59-7a645eab4fb5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdifference\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtotal_seconds\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfakeArticlesPD\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'user'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtestDate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtotal_seconds\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'datetime.datetime' object has no attribute 'total_seconds'"
+     ]
     }
    ],
    "source": [
@@ -2332,7 +2421,8 @@
     "min_sec = list(divmod(difference.days * seconds_in_day + difference.seconds, 60))\n",
     "total_sec = min_sec[0]*60+min_sec[1]\n",
     "print(difference.total_seconds())\n",
-    "print(fakeArticlesPD['user'])"
+    "print(fakeArticlesPD['user'])\n",
+    "print(testDate.total_seconds())"
    ]
   },
   {
@@ -2376,83 +2466,6 @@
     "    \n",
     "plt.show()\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## People Reached Scatterplot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#X=Time, Y=Number of Followers\n",
-    "import matplotlib.pylab as plt\n",
-    "realFlw = {}\n",
-    "fakeFlw = {}\n",
-    "for i,user in enumerate(df['id_str_user']):\n",
-    "    if (df['label'][i]=='real'):\n",
-    "        temp = df['followers'][i].split(', ')\n",
-    "        realFlw[user] = len(temp)\n",
-    "        \n",
-    "for i,user in enumerate(df['id_str_user']):\n",
-    "    if (df['label'][i]=='fake'):\n",
-    "        temp = df['followers'][i].split(', ')\n",
-    "        fakeFlw[user] = len(temp)\n",
-    "        \n",
-    "for user in fakeFlw:\n",
-    "    if user not in realFlw.keys():\n",
-    "        realFlw[user] = np.nan\n",
-    "for user in realFlw:\n",
-    "    if user not in fakeFlw.keys():\n",
-    "        fakeFlw[user] = np.nan\n",
-    "        #plt.scatter(realUsersTotal.items(),fakeUsersTotal.items())\n",
-    "\n",
-    "#plt.show()\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax1 = fig.add_subplot(111)\n",
-    "idx = []\n",
-    "for item in range(len(realFlw.keys())):\n",
-    "    idx.append(item)\n",
-    "\n",
-    "items = []\n",
-    "fakeItems=[]\n",
-    "for key in realFlw.keys():\n",
-    "    items.append(realFlw[key])\n",
-    "for key in fakeFlw.keys():\n",
-    "    fakeItems.append(fakeFlw[key])\n",
-    "    \n",
-    "keys = sorted(set(list(realFlw.keys())+list(fakeFlw.keys())))\n",
-    "\n",
-    "#add values from set of real and fake to realUsersTotal if 77\n",
-    "d = dict([(y,x+1) for x,y in enumerate(keys)])\n",
-    "temp = [d[x] for x in realFlw.keys()]\n",
-    "for i,key in enumerate(temp):\n",
-    "    realFlw[key] = realFlw.pop(list(d)[i])\n",
-    "    \n",
-    "d2 = dict([(y,x+1) for x,y in enumerate(keys)])\n",
-    "temp = [d2[x] for x in fakeFlw.keys()]\n",
-    "for i,key in enumerate(temp):\n",
-    "    fakeFlw[key] = fakeFlw.pop(list(d2)[i])\n",
-    "print(np.array(items)[~np.isnan(items)].mean())\n",
-    "print(np.array(fakeItems)[~np.isnan(np.array(fakeItems))].mean())\n",
-    "ax1.scatter(realFlw.keys(), items, c='g', label='real')\n",
-    "ax1.scatter(fakeFlw.keys(), fakeItems, c='r', label='fake')\n",
-    "ax1.set_xlabel('Users')\n",
-    "ax1.set_ylabel('Followers')\n",
-    "x_arr = [x for x in realFlw.keys()]\n",
-    "y_arr = [y for y in fakeFlw.keys()]\n",
-    "ax1.text(np.mean(x_arr), np.array(items)[~np.isnan(np.array(items))].mean(), 'O', size=20, color='g')\n",
-    "ax1.text(np.mean(y_arr),np.array(fakeItems)[~np.isnan(np.array(fakeItems))].mean(), 'X', size=20, color='r')\n",
-    "plt.title(\"Followers Frequency Scatterplot\", fontsize=17)\n",
-    "plt.legend();\n",
-    "plt.show()"
    ]
   },
   {
