--- a/Visualization/Plot.ipynb
+++ b/Visualization/Plot.ipynb
@@ -2984,28 +2984,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_text(text, remove_stopwords = True):\n",
-    "    output = \"\"\n",
-    "    text = str(text).replace(r'http[\\w:/\\.]+','') # removing urls\n",
-    "    text = str(text).replace(r'[^\\.\\w\\s]','') #remove everything but characters and punctuation\n",
-    "    text = str(text).replace(r'\\.\\.+','.') #replace multiple periods with a single one\n",
-    "    text = str(text).replace(r'\\.',' . ') #replace periods with a single one\n",
-    "    text = str(text).replace(r'\\s\\s+',' ') #replace multiple white space with a single one\n",
-    "    text = str(text).replace('\\n', '') #removing line breaks\n",
-    "    text = re.sub(r'[^\\w\\s]','',text).lower() #lower texts\n",
-    "    if remove_stopwords:\n",
-    "        text = text.split(' ')\n",
-    "    for word in text:\n",
-    "        if word not in stopwords.words('english'):\n",
-    "            output = output + \" \" + word\n",
-    "        #else:\n",
-    "            #output = text\n",
-    "            #print(word)\n",
-    "    return str(output.strip())"
+    "!pip install import_ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function clean_text at 0x0000021DD335ED08>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "# insert at 1, 0 is the script path (or '' in REPL)\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "import import_ipynb\n",
+    "#import testing\n",
+    "from LSTM.functions import clean_text\n",
+    "print(clean_text)\n",
+    "\n",
+    "#print(recurrent_neural_networks.clean_text())\n",
+    "#from LSTM import clean_text"
    ]
   },
   {
