--- a/Visualization/Plot.ipynb
+++ b/Visualization/Plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,21 +31,44 @@
     "    realTweets = pickle.load(handle)\n",
     "    \n",
     "fakeArticlesPD = pd.read_pickle(\"fakePD.pkl\")\n",
-    "realArticlesPD = pd.read_pickle(\"realPD.pkl\")"
+    "\n",
+    "with open('realArticlesDict.pickle', 'rb') as handle:\n",
+    "    realArticlesDict = pickle.load(handle)\n",
+    "realArticlesPD = pd.DataFrame(realArticlesDict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(817, 30)"
+       "(147196, 31)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fakeArticlesPD.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2651,8 +2674,8 @@
     "import pickle\n",
     "import pandas as pd\n",
     "\n",
-    "fakeArticles = pd.read_pickle(\"fakePD.pkl\")\n",
-    "realArticles = pd.read_pickle(\"realPD.pkl\")"
+    "fakeArticles = pd.read_pickle(\"fakeArticlesPD.pkl\")\n",
+    "realArticles = pd.read_pickle(\"realArticlesPD.pkl\")"
    ]
   },
   {
@@ -3011,8 +3034,8 @@
     "\n",
     "import import_ipynb\n",
     "#import testing\n",
-    "from LSTM.functions import clean_text\n",
-    "print(clean_text)\n",
+    "from LSTM.functions import remove_Symbols\n",
+    "print(remove_Symbols)\n",
     "\n",
     "#print(recurrent_neural_networks.clean_text())\n",
     "#from LSTM import clean_text"
@@ -3099,7 +3122,7 @@
     "        wordsList = words.split()\n",
     "    #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        uniqueWords = []\n",
     "        for word in wordsList:\n",
     "            #print(word)\n",
@@ -3129,7 +3152,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "        uniqueWords = []\n",
@@ -3215,7 +3238,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "        for word in wordsList:\n",
@@ -3239,7 +3262,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "        for word in wordsList:\n",
@@ -3264,7 +3287,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "            #print(word)\n",
@@ -3293,7 +3316,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "        #print(word)\n",
@@ -4339,7 +4362,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        uniqueWords = []\n",
     "        for word in wordsList:\n",
     "            #print(word)\n",
@@ -4376,7 +4399,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "        uniqueWords = []\n",
@@ -5587,7 +5610,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "        for word in wordsList:\n",
@@ -5616,7 +5639,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "            #print(word)\n",
@@ -5652,7 +5675,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "        for word in wordsList:\n",
@@ -5682,7 +5705,7 @@
     "        wordsList = words.split()\n",
     "        #remove symbols\n",
     "        #wordsList = [i.strip(']./,+_-?:\\[') for i in wordsList]\n",
-    "        wordsList = [clean_text(i) for i in wordsList]\n",
+    "        wordsList = [remove_Symbols(i) for i in wordsList]\n",
     "        #uniqueWords = set(wordsList)\n",
     "        #print(uniqueWords)\n",
     "            #print(word)\n",
