--- a/LSTM/functions.ipynb
+++ b/LSTM/functions.ipynb
@@ -6,7 +6,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def remove_Symbols(input_str):\n",
+    "    import re\n",
+    "    import nltk\n",
+    "    from nltk import stopwords\n",
+    "    output = \"\"\n",
+    "    input_str = str(input_str).replace(r'[^\\w\\s\\.]','') #symbols\n",
+    "    input_str = str(input_str).replace(r'http[+:\\w/\\.]','') #urls\n",
+    "    input_str = str(input_str).replace(r'\\.+\\.','.') #multiple periods\n",
+    "    input_str = str(input_str).replace(r'\\.',' . ') #single periods\n",
+    "    input_str = str(input_str).replace('\\n', '') #line breaks\n",
+    "    input_str = re.sub(r'[\\s^\\w]','',text).lower() #lower case\n",
+    "    input_str = str(input_str).replace(r'\\s\\s+',' ') #multiple space\n",
+    "    input_str = input_str.split(' ')\n",
+    "    for term in input_str:\n",
+    "        if term not in stopwords.words('english'):\n",
+    "            output = output + \" \" + term\n",
+    "    return str(output.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def clean_text(text, remove_stopwords = True):\n",
+    "    import re\n",
+    "    import nltk\n",
+    "    from nltk import stopwords\n",
     "    output = \"\"\n",
     "    text = str(text).replace(r'http[\\w:/\\.]+','') # removing urls\n",
     "    text = str(text).replace(r'[^\\.\\w\\s]','') #remove everything but characters and punctuation\n",
@@ -20,9 +48,6 @@
     "    for word in text:\n",
     "        if word not in stopwords.words('english'):\n",
     "            output = output + \" \" + word\n",
-    "        #else:\n",
-    "            #output = text\n",
-    "            #print(word)\n",
     "    return str(output.strip())[1:-3].replace(' ', ' ')"
    ]
   }
