--- a/testing/timecascade/Plot.ipynb
+++ b/testing/timecascade/Plot.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#means of lists of different lengths\n",
+    "#fakeArticlesPD['created_at_retweets']\n",
+    "#fakeArticlesPD['followers_count_retweets']\n",
+    "fakeArticlesPD = pd.read_pickle('fakePD.pkl')\n",
+    "realArticlesPD = pd.read_pickle('realPD.pkl')\n",
+    "    \n",
+    "a = np.array(fakeArticlesPD['followers_count_retweets'].tolist())\n",
+    "def column_wise_sum(rows):\n",
+    "    columns = zip_longest(*rows, fillvalue=0)\n",
+    "    return [sum(col)/len(rows) for col in columns] \n",
+    "column_wise_sum(a)\n",
+    "y = a.mean(axis=0)\n",
+    "\n",
+    "#Convert datetime\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -2141,7 +2163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
