--- a/LSTM/Preprocessing.ipynb
+++ b/LSTM/Preprocessing.ipynb
@@ -5570,7 +5570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakeArticlesPD.to_pickle(\"../Visualization/fakeArticlesPD.pkl\")\n",
+    "fakeArticlesPD.to_pickle(\"../Visualization/fakeArticlesPD_2.pkl\")\n",
     "realArticlesDict = realArticlesPD.to_dict('realArticlesDict')\n",
     "with open('../Visualization/realArticlesDict.pickle', 'wb') as handle:\n",
     "    pickle.dump(realArticlesDict, handle, protocol=pickle.HIGHEST_PROTOCOL)"
@@ -5582,9 +5582,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fakeArticlesPD = pd.read_pickle(\"fakeArticlesPD.pkl\")\n",
+    "fakeArticlesPD = pd.read_pickle(\"../Visualization/fakeArticlesPD_2.pkl\")\n",
     "\n",
-    "with open('realArticlesPD.pickle', 'rb') as handle:\n",
+    "with open('../Visualization/realArticlesDict.pickle', 'rb') as handle:\n",
     "    realArticlesPD = pickle.load(handle)\n",
     "realArticlesPD = pd.DataFrame(realArticlesPD)"
    ]
